# defmt-embassy-usbserial

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
device-examples/: README.md
device-examples/esp32s2/: Cargo.toml  build.rs
device-examples/esp32s2/.cargo/: config.toml
device-examples/esp32s2/src/: main.rs
device-examples/rp2040/: Cargo.toml
device-examples/rp2040/.cargo/: config.toml
device-examples/rp2040/src/: main.rs
device-examples/rp235x/: Cargo.toml  memory.x
device-examples/rp235x/.cargo/: config.toml
device-examples/rp235x/src/: main.rs
src/: controller.rs  lib.rs  task.rs
