[package]
name = "defmtusb-rp2040-helloworld"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-embassy-usbserial = { path = "../.." }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-interrupt",
    "executor-thread",
] }
embassy-rp = { version = "0.8.0", features = [
    "default",
    "rp2040",
    "time-driver",
    "critical-section-impl",
] }
embassy-time = { version = "0.5", features = [] }
embassy-usb = { version = "0.5", features = [] }
embedded-hal = "1"
embedded-hal-async = "1"
panic-probe = { version = "1.0.0", features = ["print-rtt"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
rtt-target = { version = "0.6.1", features = [], default-features = false }
static_cell = { version = "2.1.1" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
